--- a/content/data/config.json
+++ b/content/data/config.json
@@ -116,5 +116,6 @@
         "anncmnt_is_home_only": true,
         "anncmnt_has_close": true,
         "anncmnt_id": "new-episode"
-    }
+    },
+    "domain": "https://maroon-spider-aa45a.netlify.app"
 }
